# wikdict-web

./: .gitignore  .hgignore  ENV  LICENSE  Procfile  README.md  cors.json  data  development_env.sh  download_dicts.sh  nginx.conf  pyproject.toml  requirements.txt  run_dev.sh  setup.py  wikdict_query  wikdict_reader
.github/: dependabot.yml
.github/workflows/: run-test.yml
static/: README
static/bootstrap/: config.json
static/bootstrap/css/: bootstrap-theme.css  bootstrap-theme.min.css  bootstrap.css
static/bootstrap/js/: bootstrap.min.js
static/css/: main.css
static/img/icons/: android-chrome-manifest.json  browserconfig.xml
static/js/: lookup.js  picker.js
static/root/: robots.txt
tests/: web_tests.py
uwsgi/: download.wikdict.nginx  wikdict.ini  wikdict.nginx
uwsgi/download.wikdict/dictionaries/: index.html
wikdict-query/: pyproject.toml
wikdict-query/wikdict_query/: __init__.py  __main__.py  data.py  languages.json
wikdict-reader/: .gitignore  CLAUDE.md  README.md  TODO  pyproject.toml
wikdict-reader/html_static/: reader.css  reader.js  wikdict_epub.css
wikdict-reader/src/wikdict_reader/: __init__.py  cli.py  epub.py  html.py  lookup.py  translate_segments.py
wikdict-reader/tests/: test_epub.py  test_translate_segments.py
wikdict-reader/wikdict_reader/: __init__.py  html.py  lookup.py  translate_segments.py
wikdict_web/: __init__.py  __main__.py  admin.py  base.py  lookup.py  reader.py  shelltools.py  template_helpers.py  typeahead.py
wikdict_web/languages/: __init__.py  gen_languages.py
wikdict_web/markdown/: about.md  contact.md  download.md
wikdict_web/templates/: base.html  lookup.html  markdown.html  opensearch.xml  reader-input.html  reader-output.html
wikdict_web/templates/admin/: activity.html  user_agents.html
wsgi/: application  runserver.py  web_tests.py
wsgi/myapp/: __init__.py  admin.py  base.py  lookup.py  typeahead.py
wsgi/myapp/languages/: __init__.py
wsgi/myapp/markdown/: about.md  contact.md
wsgi/myapp/templates/: about.html  base.html  contact.html  index.html  lookup.html  macros.html  markdown.html  opensearch.xml
wsgi/myapp/templates/admin/: index.html  summary.html  week.html
wsgi/myapp/templates/shared/: base.html
wsgi/static/bootstrap/css/: bootstrap.min.css
wsgi/static/bootstrap/js/: bootstrap.js
wsgi/static/css/: main.css
wsgi/static/img/icons/: android-chrome-manifest.json
wsgi/static/js/: lookup.js  typeahead.jquery.min.js
wsgi/static/root/: robots.txt
