[project]
name = "wikdict-web"
version = "1.0"
description = "Web frontend for WikDict's bilingual dictionaries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "flask-assets>=2.1.0",
    "jinja2>=3.1.5",
    "markdown>=3.7",
    "sqlite-spellfix>=1.1",
    "wikdict-compound==0.2",
    "wikdict-query",
    "wikdict-reader",
]
authors = [
  {name = "Karl Bartel", email = "karl@karl.berlin"},
]

[tool.uv.sources]
wikdict-query = { workspace = true }
wikdict-reader = { workspace = true }
wikdict-compound = { git = "https://github.com/karlb/wikdict-compound/" }

[tool.uv.workspace]
members = ["wikdict-query", "wikdict-reader"]

[dependency-groups]
dev = [
    "flask-testing>=0.8.1",
    "mypy>=1.0",
]

[tool.ruff.lint]
# Default pyflakes (F) + error (E) rules, minus E501 line-length (long SQL
# strings), plus isort (I).
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Routes/submodules are imported after `app` is created, on purpose.
"wikdict_web/__init__.py" = ["E402"]

[tool.mypy]
ignore_missing_imports = true
