[tool.poetry]
name = "wikdict-query"
version = "0.1.0"
description = "Query WikDict SQLite databases"
authors = ["Karl Bartel <karl@karl.berlin>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
